--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Panel</title>
+  <!-- <base href="https://dashboard.revords.com/AdminPanel/" /> -->
   <base href="/">
   <meta name="viewport" content="width=device-1024, user-scalable=yes" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
